Added simple OTA update

--- a/.gitignore
+++ b/.gitignore
@@ -340,3 +340,4 @@ ASALocalRun/
 healthchecksdb
 /CodeDB/ESP32.vgdbproj-Debug
 /ESP32/VisualGDBCache/ESP32-Debug-VisualGDB
+/CodeDB/ESP32.vgdbproj-Debug.0001
